results/SpecGenBench/2-shot/log-KthLargest-2023_11_06_02_03_14.txt
import java.util.PriorityQueue;

class KthLargest {
    //@ requires nums != null;
    //@ requires k > 0 && k <= nums.length;
    //@ ensures \result == \max(int i; 0 <= i && i < nums.length; \result <= nums[i]);
    public static int kthLargest(int[] nums, int k) {
        PriorityQueue<Integer> pq = new PriorityQueue<Integer>();
        
        for (int x : nums) {
            pq.offer(x);
            if (pq.size() > k) {
                pq.poll();
            }
        }

        return pq.peek();
    }
}
/home/max/Documents/JMLGPT/tmp/KthLargest.java:6: error: illegal start of type
    //@ ensures \result == \max(int i; 0 <= i && i < nums.length; \result <= nums[i]);
                               ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:6: error: illegal start of type
    //@ ensures \result == \max(int i; 0 <= i && i < nums.length; \result <= nums[i]);
                                       ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:6: error: <identifier> expected
    //@ ensures \result == \max(int i; 0 <= i && i < nums.length; \result <= nums[i]);
                                             ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:6: error: > expected
    //@ ensures \result == \max(int i; 0 <= i && i < nums.length; \result <= nums[i]);
                                                                ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:6: error: Token \result is not a type
    //@ ensures \result == \max(int i; 0 <= i && i < nums.length; \result <= nums[i]);
                                                                  ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:6: error: ';' expected
    //@ ensures \result == \max(int i; 0 <= i && i < nums.length; \result <= nums[i]);
                                                                         ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:6: error: ']' expected
    //@ ensures \result == \max(int i; 0 <= i && i < nums.length; \result <= nums[i]);
                                                                                  ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:6: error: ';' expected
    //@ ensures \result == \max(int i; 0 <= i && i < nums.length; \result <= nums[i]);
                                                                                   ^
8 errors

